--- a/app/src/main/res/layout-land/fragment_edit_medicine.xml
+++ b/app/src/main/res/layout-land/fragment_edit_medicine.xml
@@ -110,6 +110,18 @@
                         android:layout_weight="1" />
 
                     <com.google.android.material.button.MaterialButton
+                        android:id="@+id/openNotes"
+                        style="?attr/materialIconButtonFilledStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:contentDescription="@string/notes"
+                        android:minWidth="48dp"
+                        android:minHeight="48dp"
+                        app:icon="@drawable/journal_text"
+                        app:iconPadding="0dp" />
+
+                    <com.google.android.material.button.MaterialButton
                         android:id="@+id/openTags"
                         style="?attr/materialIconButtonFilledStyle"
                         android:layout_width="wrap_content"
