--- a/app/src/main/res/xml/privacy_preferences.xml
+++ b/app/src/main/res/xml/privacy_preferences.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:defaultValue="false"
         android:key="window_flag_secure"
         android:title="@string/block_screen_capture" />
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:defaultValue="false"
         android:enabled="false"
         android:key="app_authentication"
         android:title="@string/app_authentication" />
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:defaultValue="false"
         android:key="hide_med_name"
         android:title="@string/hide_med_name" />
