--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -81,6 +81,7 @@
     <string-array name="notification_importance">
         <item>@string/default_</item>
         <item>@string/high</item>
+        <item>@string/high_and_alarm</item>
     </string-array>
     <string-array name="backup_types">
         <item>@string/medicine_data</item>
