--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/alarmNavHost"
-    android:name="androidx.navigation.fragment.NavHostFragment"
+    android:id="@+id/alarmFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
