--- a/app/src/main/res/layout/fragment_advanced_reminder_settings.xml
+++ b/app/src/main/res/layout/fragment_advanced_reminder_settings.xml
@@ -194,6 +194,14 @@
 
             <include layout="@layout/include_interval_settings" />
 
+            <View
+                android:id="@+id/divider7"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="?android:attr/listDivider" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editInstructionsLayout"
                 android:layout_width="match_parent"
