Linked reminder, add proper strings

--- a/app/src/main/res/xml/advanced_reminder_settings_instructions.xml
+++ b/app/src/main/res/xml/advanced_reminder_settings_instructions.xml
@@ -2,10 +2,10 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <EditTextPreference
-        android:title="Dosing instructions"
+        android:title="@string/dosing_instructions"
         app:key="instructions" />
     <ListPreference
-        android:title="Fill with sample instructions"
+        android:title="@string/sample_instructions"
         app:key="sample_instructions"
         android:entries="@array/instructions_suggestions"
         android:entryValues="@array/instructions_suggestions"/>
