--- a/app/src/main/res/xml/advanced_reminder_settings_status.xml
+++ b/app/src/main/res/xml/advanced_reminder_settings_status.xml
@@ -3,10 +3,10 @@
     <SwitchPreferenceCompat app:key="reminder_status" app:title="@string/active"/>
     <PreferenceCategory>
     <SwitchPreferenceCompat app:dependency="reminder_status" app:key="period_start_switch" app:title="@string/period_start" />
-    <Preference app:dependency="period_start_switch" app:title="@string/date" app:key="period_start_date"/>
+    <Preference app:dependency="period_start_switch" app:title="@string/start_date" app:key="period_start_date"/>
     </PreferenceCategory>
     <PreferenceCategory>
     <SwitchPreferenceCompat app:dependency="reminder_status" app:key="period_end_switch" app:title="@string/period_end" />
-    <Preference app:dependency="period_end_switch" app:title="@string/date" app:key="period_end_date" />
+    <Preference app:dependency="period_end_switch" app:title="@string/end_date" app:key="period_end_date" />
     </PreferenceCategory>
 </androidx.preference.PreferenceScreen>
