Move cyclic reminder to own file Fix deleting reminder Add icons

--- a/app/src/main/res/menu/advanced_reminder_settings.xml
+++ b/app/src/main/res/menu/advanced_reminder_settings.xml
@@ -1,5 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/delete_reminder"
+        android:icon="@drawable/trash"
         android:title="@string/delete" />
 </menu>
