--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -130,6 +130,9 @@
         <action
             android:id="@+id/action_advancedReminderPreferencesRootFragment_to_advancedReminderPreferencesIntervalType"
             app:destination="@id/advancedReminderPreferencesIntervalType" />
+        <action
+            android:id="@+id/action_advancedReminderPreferencesRootFragment_to_advancedReminderPreferencesCyclicFragment"
+            app:destination="@id/advancedReminderPreferencesCyclicFragment" />
     </fragment>
     <fragment
         android:id="@+id/advancedReminderPreferencesInstructionsFragment"
@@ -151,6 +154,14 @@
         android:id="@+id/advancedReminderPreferencesIntervalType"
         android:name="com.futsch1.medtimer.medicine.advancedSettings.AdvancedReminderPreferencesIntervalType"
         android:label="@string/interval_type">
+        <argument
+            android:name="reminderId"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/advancedReminderPreferencesCyclicFragment"
+        android:name="com.futsch1.medtimer.medicine.advancedSettings.AdvancedReminderPreferencesCyclicFragment"
+        android:label="AdvancedReminderPreferencesCyclicFragment">
         <argument
             android:name="reminderId"
             app:argType="integer" />
